--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <h1> Dnyanesh Kolapkar</h1>
 <h2> Associate Data Scientist,<br>
 AlgoAnalytics, Pune.</h2>
+
+<h3>E mail - dnyaneshkolapkar@gmail.com<h3>
