--- a/index.html
+++ b/index.html
@@ -1,93 +1,1 @@
-<html>
-<head><meta http-equiv=Content-Type content="text/html; charset=UTF-8">
-<style type="text/css">
-<!--
-span.cls_002{font-family:Arial,serif;font-size:14.4px;color:rgb(0,0,0);font-weight:normal;font-style:normal;text-decoration: none}
-div.cls_002{font-family:Arial,serif;font-size:14.4px;color:rgb(0,0,0);font-weight:normal;font-style:normal;text-decoration: none}
-span.cls_003{font-family:Arial,serif;font-size:11.0px;color:rgb(0,0,0);font-weight:normal;font-style:normal;text-decoration: none}
-div.cls_003{font-family:Arial,serif;font-size:11.0px;color:rgb(0,0,0);font-weight:normal;font-style:normal;text-decoration: none}
-span.cls_004{font-family:Arial,serif;font-size:12.0px;color:rgb(0,0,0);font-weight:normal;font-style:normal;text-decoration: none}
-div.cls_004{font-family:Arial,serif;font-size:12.0px;color:rgb(0,0,0);font-weight:normal;font-style:normal;text-decoration: none}
--->
-</style>
-<script type="text/javascript" src="73f62db0-5780-11e8-b174-0cc47a792c0a_id_73f62db0-5780-11e8-b174-0cc47a792c0a_files/wz_jsgraphics.js"></script>
-</head>
-<body>
-<div style="position:absolute;left:50%;margin-left:-306px;top:0px;width:612px;height:792px;border-style:outset;overflow:hidden">
-<div style="position:absolute;left:0px;top:0px">
-<img src="73f62db0-5780-11e8-b174-0cc47a792c0a_id_73f62db0-5780-11e8-b174-0cc47a792c0a_files/background1.jpg" width=612 height=792></div>
-<div style="position:absolute;left:54.00px;top:53.22px" class="cls_002"><span class="cls_002">Dnyanesh Kolapkar</span></div>
-<div style="position:absolute;left:437.09px;top:56.65px" class="cls_003"><span class="cls_003">Mobile - +91 7588298595</span></div>
-<div style="position:absolute;left:54.00px;top:70.20px" class="cls_003"><span class="cls_003">Associate Data Scientist, AlgoAnalytics, Pune.</span></div>
-<div style="position:absolute;left:377.76px;top:70.20px" class="cls_003"><span class="cls_003">Email - dnyaneshkolapkar@gmail.com</span></div>
-<div style="position:absolute;left:54.00px;top:83.75px" class="cls_003"><span class="cls_003">LinkedIn - </span><A HREF="http://www.linkedin.com/in/dnyanesh-kolapkar/">www.linkedin.com/in/dnyanesh-kolapkar</A> </div>
-<div style="position:absolute;left:374.22px;top:83.75px" class="cls_003"><span class="cls_003">Github - </span><A HREF="https://github.com/dnyakola/">https://github.com/dnyakola</A> </div>
-<div style="position:absolute;left:62.38px;top:122.63px" class="cls_004"><span class="cls_004">Projects</span></div>
-<div style="position:absolute;left:438.75px;top:122.63px" class="cls_004"><span class="cls_004">AlgoAnalytics, Pune</span></div>
-<div style="position:absolute;left:70.36px;top:158.51px" class="cls_003"><span class="cls_003">•</span><span class="cls_002"> Chat bot Application</span></div>
-<div style="position:absolute;left:462.55px;top:161.95px" class="cls_003"><span class="cls_003">Nov 2017 - Ongoing</span></div>
-<div style="position:absolute;left:93.55px;top:183.69px" class="cls_003"><span class="cls_003">- Developing Chatting application using natural language processing techniques in Python.</span></div>
-<div style="position:absolute;left:70.36px;top:202.00px" class="cls_003"><span class="cls_003">•</span><span class="cls_002"> Resource Prediction</span></div>
-<div style="position:absolute;left:457.39px;top:205.44px" class="cls_003"><span class="cls_003">Sept 2017 - Oct 2017</span></div>
-<div style="position:absolute;left:93.55px;top:227.19px" class="cls_003"><span class="cls_003">- Predicted the number of resources required in upcoming quarters using Time Series Analysis</span></div>
-<div style="position:absolute;left:105.27px;top:240.73px" class="cls_003"><span class="cls_003">in R.</span></div>
-<div style="position:absolute;left:62.38px;top:285.19px" class="cls_004"><span class="cls_004">Internship</span></div>
-<div style="position:absolute;left:400.70px;top:285.19px" class="cls_004"><span class="cls_004">Veritas Technologies, Pune</span></div>
-<div style="position:absolute;left:70.36px;top:321.07px" class="cls_003"><span class="cls_003">•</span><span class="cls_002"> Veritas License Management Server</span></div>
-<div style="position:absolute;left:456.48px;top:324.51px" class="cls_003"><span class="cls_003">Jan 2017 - June 2017</span></div>
-<div style="position:absolute;left:93.55px;top:346.26px" class="cls_003"><span class="cls_003">- Developed web application for license management using technologies like Bootstrap,</span></div>
-<div style="position:absolute;left:105.27px;top:359.81px" class="cls_003"><span class="cls_003">JavaScript, NodeJS and MongoDB.</span></div>
-<div style="position:absolute;left:62.38px;top:406.39px" class="cls_004"><span class="cls_004">Projects</span></div>
-<div style="position:absolute;left:480.11px;top:406.39px" class="cls_004"><span class="cls_004">WCE, Sangli</span></div>
-<div style="position:absolute;left:70.36px;top:442.27px" class="cls_003"><span class="cls_003">•</span><span class="cls_002"> Character Recognition</span></div>
-<div style="position:absolute;left:457.70px;top:445.71px" class="cls_003"><span class="cls_003">July 2016 - Dec 2016</span></div>
-<div style="position:absolute;left:93.55px;top:467.45px" class="cls_003"><span class="cls_003">- Characters in image are recognized using machine learning algorithms implemented in Julia.</span></div>
-<div style="position:absolute;left:70.36px;top:485.76px" class="cls_003"><span class="cls_003">•</span><span class="cls_002"> Cricklytics</span></div>
-<div style="position:absolute;left:456.48px;top:489.20px" class="cls_003"><span class="cls_003">Jan 2016 - June 2016</span></div>
-<div style="position:absolute;left:93.55px;top:510.94px" class="cls_003"><span class="cls_003">- Analysis and prediction of T20 world cup 2016 matches. Pie charts and Decision trees are</span></div>
-<div style="position:absolute;left:105.27px;top:524.49px" class="cls_003"><span class="cls_003">build using WEKA and R language.</span></div>
-<div style="position:absolute;left:70.36px;top:542.80px" class="cls_003"><span class="cls_003">•</span><span class="cls_002"> Heart Beat Monitor System</span></div>
-<div style="position:absolute;left:457.70px;top:546.24px" class="cls_003"><span class="cls_003">July 2015 - Dec 2015</span></div>
-<div style="position:absolute;left:93.55px;top:567.99px" class="cls_003"><span class="cls_003">- Heart beat monitoring system is developed using LabVIEW software and NI MyRIO kit.</span></div>
-<div style="position:absolute;left:62.38px;top:614.57px" class="cls_004"><span class="cls_004">Technical Skills</span></div>
-<div style="position:absolute;left:70.36px;top:650.24px" class="cls_003"><span class="cls_003">•</span><span class="cls_002"> Data Science Skills</span></div>
-<div style="position:absolute;left:93.55px;top:675.43px" class="cls_003"><span class="cls_003">- Machine Learning, Natural Language Processing, Data Mining, Statistics.</span></div>
-<div style="position:absolute;left:70.36px;top:693.74px" class="cls_003"><span class="cls_003">•</span><span class="cls_002"> Data Science Tools</span></div>
-<div style="position:absolute;left:93.55px;top:718.92px" class="cls_003"><span class="cls_003">- Python, R, Julia, KNIME, WEKA.</span></div>
-</div>
-<div style="position:absolute;left:50%;margin-left:-306px;top:802px;width:612px;height:792px;border-style:outset;overflow:hidden">
-<div style="position:absolute;left:0px;top:0px">
-<img src="73f62db0-5780-11e8-b174-0cc47a792c0a_id_73f62db0-5780-11e8-b174-0cc47a792c0a_files/background2.jpg" width=612 height=792></div>
-<div style="position:absolute;left:62.38px;top:72.53px" class="cls_004"><span class="cls_004">Curriculum</span></div>
-<div style="position:absolute;left:70.36px;top:110.52px" class="cls_003"><span class="cls_003">•</span><span class="cls_002"> B. Tech in Information Technology</span></div>
-<div style="position:absolute;left:454.82px;top:113.96px" class="cls_003"><span class="cls_003">July 2013 - May 2017</span></div>
-<div style="position:absolute;left:93.55px;top:136.47px" class="cls_003"><span class="cls_003">- Walchand College of Engineering, Sangli.</span></div>
-<div style="position:absolute;left:114.76px;top:154.01px" class="cls_003"><span class="cls_003">∗ CGPA of 7.79/10.</span></div>
-<div style="position:absolute;left:70.36px;top:173.09px" class="cls_003"><span class="cls_003">•</span><span class="cls_002"> Junior College (HSC)</span></div>
-<div style="position:absolute;left:454.82px;top:176.52px" class="cls_003"><span class="cls_003">July 2011 - May 2013</span></div>
-<div style="position:absolute;left:93.55px;top:199.04px" class="cls_003"><span class="cls_003">- Balasaheb Bharde Jr. College, Shevgaon.</span></div>
-<div style="position:absolute;left:114.76px;top:216.57px" class="cls_003"><span class="cls_003">∗ Percentage - 74.33%.</span></div>
-<div style="position:absolute;left:70.36px;top:235.65px" class="cls_003"><span class="cls_003">•</span><span class="cls_002"> Secondary School (SSC)</span></div>
-<div style="position:absolute;left:454.82px;top:239.09px" class="cls_003"><span class="cls_003">July 2010 - May 2011</span></div>
-<div style="position:absolute;left:93.55px;top:261.60px" class="cls_003"><span class="cls_003">- Balasaheb Bharde High School, Shevgaon.</span></div>
-<div style="position:absolute;left:114.76px;top:279.14px" class="cls_003"><span class="cls_003">∗ Percentage - 82.91%.</span></div>
-<div style="position:absolute;left:62.38px;top:328.02px" class="cls_004"><span class="cls_004">Co - Curriculum</span></div>
-<div style="position:absolute;left:70.36px;top:366.01px" class="cls_003"><span class="cls_003">•</span><span class="cls_002"> IT Dept. Lab</span></div>
-<div style="position:absolute;left:93.55px;top:391.96px" class="cls_003"><span class="cls_003">- Chief admin.</span></div>
-<div style="position:absolute;left:454.82px;top:391.96px" class="cls_003"><span class="cls_003">July 2016 - May 2017</span></div>
-<div style="position:absolute;left:93.55px;top:409.50px" class="cls_003"><span class="cls_003">– Admin.</span></div>
-<div style="position:absolute;left:454.82px;top:409.50px" class="cls_003"><span class="cls_003">July 2015 - May 2016</span></div>
-<div style="position:absolute;left:70.36px;top:428.58px" class="cls_003"><span class="cls_003">•</span><span class="cls_002"> Walchand Linux Users’ Group</span></div>
-<div style="position:absolute;left:93.55px;top:454.53px" class="cls_003"><span class="cls_003">- Secretary.</span></div>
-<div style="position:absolute;left:454.82px;top:454.53px" class="cls_003"><span class="cls_003">July 2016 - May 2017</span></div>
-<div style="position:absolute;left:93.55px;top:472.06px" class="cls_003"><span class="cls_003">– Asst. Technical Advisor.</span></div>
-<div style="position:absolute;left:454.82px;top:472.06px" class="cls_003"><span class="cls_003">July 2015 - May 2016</span></div>
-<div style="position:absolute;left:62.38px;top:520.95px" class="cls_004"><span class="cls_004">Declaration</span></div>
-<div style="position:absolute;left:70.36px;top:562.37px" class="cls_003"><span class="cls_003">• I hereby declare that the above mentioned information is true to the best of my knowledge and</span></div>
-<div style="position:absolute;left:81.27px;top:575.92px" class="cls_003"><span class="cls_003">belief.</span></div>
-<div style="position:absolute;left:81.27px;top:617.50px" class="cls_003"><span class="cls_003">Date :</span></div>
-<div style="position:absolute;left:464.73px;top:617.50px" class="cls_003"><span class="cls_003">Dnyanesh Kolapkar</span></div>
-</div>
-
-</body>
-</html>
+Dnyanesh Kolapkar
